<resources>
    <string name="app_name">Taken</string>


    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="btn_get_location">GET MY LOCATION</string>

    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>

    <string name="tracking_is_off">Tracking is Off</string>
    <string name="tracking_is_on">Tracking is On</string>
</resources>
